# casbin-proto

./: Cargo.toml  README.md
proto/: cluster.proto  eraftpb.proto
src/: lib.rs
